feat: role-based access, user management & full bug fix pass