@@ -1,87 +1,85 @@
-
 package com.k2dev.smart_village.controller;
 
 import com.k2dev.smart_village.entity.Person;
 import com.k2dev.smart_village.repository.HouseholdRepository;
 import com.k2dev.smart_village.repository.PersonRepository;
-import lombok.RequiredArgsConstructor;
+import com.k2dev.smart_village.security.ScopeUtil;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/persons")
-@RequiredArgsConstructor
 public class PersonController {
 
-    @Autowired
-    private PersonRepository repo;
+    @Autowired private PersonRepository repo;
+    @Autowired private HouseholdRepository householdRepo;
 
-    @Autowired
-    private HouseholdRepository householdRepo;
-
-    /**
-     * ดึงบุคคลทั้งหมดในระบบ (สำหรับ Admin)
-     */
     @GetMapping
     public List<Person> list() {
-        return repo.findAll();
+        if (ScopeUtil.isAdmin()) return repo.findAll();
+        Integer vid = ScopeUtil.getScopeId();
+        if (vid == null) return List.of();
+        List<Integer> hhIds = householdRepo.findByVillageId(vid).stream()
+                .map(h -> h.getHouseholdId()).toList();
+        return repo.findByHouseholdIdIn(hhIds);
     }
 
-    /**
-     * ดึงบุคคลทั้งหมดในหมู่บ้านที่กำหนด (สำหรับผู้ใช้ระดับหมู่บ้าน role = VILLAGE)
-     * วิธีการ: หา householdId ทั้งหมดในหมู่บ้านก่อน แล้วค่อย query บุคคล
-     * ตัวอย่าง: GET /api/persons/by-village/3
-     */
     @GetMapping("/by-village/{villageId}")
     public List<Person> listByVillage(@PathVariable Integer villageId) {
-        List<Integer> householdIds = householdRepo.findByVillageId(villageId)
-                .stream()
-                .map(h -> h.getHouseholdId())
-                .collect(Collectors.toList());
-        return repo.findByHouseholdIdIn(householdIds);
+        List<Integer> hhIds = householdRepo.findByVillageId(villageId).stream()
+                .map(h -> h.getHouseholdId()).toList();
+        return repo.findByHouseholdIdIn(hhIds);
     }
 
-    /**
-     * ดึงบุคคลทั้งหมดในครัวเรือนที่กำหนด
-     * ตัวอย่าง: GET /api/persons/by-household/5
-     */
     @GetMapping("/by-household/{householdId}")
     public List<Person> listByHousehold(@PathVariable Integer householdId) {
         return repo.findByHouseholdId(householdId);
     }
 
-    /**
-     * ดึงบุคคลตาม id
-     */
     @GetMapping("/{id}")
-    public Person get(@PathVariable Integer id) {
-        return repo.findById(id).orElseThrow();
+    public ResponseEntity<?> get(@PathVariable Integer id) {
+        return repo.findById(id)
+                .<ResponseEntity<?>>map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
-    /**
-     * เพิ่มบุคคลใหม่
-     */
     @PostMapping("/add")
-    public Person add(@RequestBody Person p) {
-        return repo.save(p);
+    public ResponseEntity<?> add(@RequestBody Person p) {
+        try {
+            p.setPersonId(null);
+            return ResponseEntity.ok(repo.save(p));
+        } catch (Exception e) {
+            String msg = e.getMessage() != null ? e.getMessage() : "เกิดข้อผิดพลาดในการบันทึก";
+            return ResponseEntity.status(500).body(Map.of("message", msg));
+        }
     }
 
-    /**
-     * แก้ไขข้อมูลบุคคล (ส่ง personId มาใน body)
-     */
     @PostMapping("/edit")
-    public Person edit(@RequestBody Person p) {
-        return repo.save(p);
+    public ResponseEntity<?> edit(@RequestBody Person p) {
+        try {
+            if (p.getPersonId() == null)
+                return ResponseEntity.badRequest().body(Map.of("message", "ต้องระบุ personId"));
+            return ResponseEntity.ok(repo.save(p));
+        } catch (Exception e) {
+            String msg = e.getMessage() != null ? e.getMessage() : "เกิดข้อผิดพลาดในการแก้ไข";
+            return ResponseEntity.status(500).body(Map.of("message", msg));
+        }
     }
 
-    /**
-     * ลบบุคคลตาม id
-     */
     @DeleteMapping("/{id}")
-    public void delete(@PathVariable Integer id) {
-        repo.deleteById(id);
+    public ResponseEntity<?> delete(@PathVariable Integer id) {
+        try {
+            if (!repo.existsById(id))
+                return ResponseEntity.notFound().build();
+            repo.deleteById(id);
+            return ResponseEntity.ok(Map.of("message", "ลบสำเร็จ"));
+        } catch (Exception e) {
+            String msg = e.getMessage() != null ? e.getMessage() : "ลบไม่สำเร็จ อาจมีข้อมูลที่เชื่อมกับบุคคลนี้อยู่";
+            return ResponseEntity.status(500).body(Map.of("message", msg));
+        }
     }
 }
